# docker-tracer

./: .gitignore  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  sbom.md
app/: __init__.py  config.py  database.py  main.py
app/api/v1/endpoints/: sbom.py
app/db/: base.py  init_db.py
app/models/: sbom.py
app/services/: sbom_storage.py
app/services/dockersdk/: __init__.py  client.py  command_utils.py  exceptions.py  match_analyzer.py  match_benchmark.py  models.py  sdk_client.py  utils.py
app/services/github/: __init__.py  github_client.py
app/services/sbom_generator/: __init__.py  container_analyzer.py  dockerfile_analyzer.py  exceptions.py  repository_analyzer.py
app/services/sbom_generator/types/: __init__.py  component.py  repository.py
examples/: __init__.py  analyze_dockerfile.py  analyze_image.py  benchmark_ollama.py  test_command_parsing.py
interactive/: gradio_app.py
tests/: conftest.py
tests/basic/: conftest.py  test_combined_sbom.py  test_container_sbom.py  test_dockerfile_matching.py  test_repository_sbom.py
tests/services/dockersdk/: conftest.py  test_exceptions.py  test_models.py  test_sdk_client.py  test_utils.py
