[project]
name = "sbomapp"
version = "0.1.0"
description = "SBOM analysis and matching service"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "lib4sbom>=0.8.2",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "plotly>=6.0.1",
    "pandas>=2.2.3",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "requests>=2.32.3",
]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:pytest_asyncio.*:",
]
