[project]
name = "sbom-app"
version = "0.1.0"
description = "SBOM Analysis and Comparison Tool"
authors = [
    {name = "Shaul", email = "shaul@example.com"},
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "gradio>=4.16.0",
    "docker>=7.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "loguru>=0.7.3",
]
requires-python = ">=3.12"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "black>=23.12.1",
    "ruff>=0.1.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow running",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 120
target-version = "py312"
